--- a/Datastore.css
+++ b/Datastore.css
@@ -1,15 +1,12 @@
+div#main_container{
+    margin-left: 20%;
+}
 div#model_properties {
-    float: left;
-    margin-left: 5%;
-    display: inline-block;
     padding: 10px;
     width: 40%;
 }
 
 div#generated_code {
-    float: right;
-    margin-right: 5%;
-    display: inline-block;
     padding: 10px;
     width: 40%;
 }
